--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -38,6 +38,18 @@
         text-shadow: 1px 1px 1px #222;
 
     }
+    .social_icons{
+        display: flex;
+        flex-direction: row;
+        color: #fff;
+        font-size: 16px;
+        margin-right: 5px;
+    }
+
+    a{
+        color: #fff;
+        font-size: 16px;
+    }
 }
 
 // Footer carousel
@@ -49,8 +61,9 @@
     }
 
     .client_Image{
-        width: 10%;
+        width: 20%;
         text-align: center;
+        margin: 0.5rem 1rem;
     }
 }
 
@@ -60,6 +73,8 @@
 
     p{
         text-align: center;
-        margin: 0.5rem 0; 
+        margin: 0.5rem 0;
+        font-size: 14px;
+        text-shadow: 1px 1px 1px #ddd;
     }
 }
