--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,42 +1,46 @@
 @import "../../styles/constants.scss";
-    .Navbar_Wrapper{
-        background: $darkGrey_bg;
-        padding: 0;
-        height: 63px;
-        .navBar_logo{
-            width: 163px;
-            background-color: $milkWhite_bg;
-            img{
-                max-width: 100%;
-                height: 63px;
-                width: 100%;
-            }
-        } 
+.Navbar_Wrapper {
+  background: $darkGrey_bg;
+  padding: 0;
+  height: 63px;
+  width: 71%;
+  .navBar_logo {
+    width: 163px;
+    background-color: $milkWhite_bg;
+    img {
+      max-width: 100%;
+      height: 63px;
+      width: 100%;
     }
-
-.nav_links_style{
-        a{color: $white_txt !important;
-        font-size: 0.9rem;
-        font-weight: $fw500;
-        margin-right: 1.5rem;
-        padding: 1.1rem;
-    } :hover,:focus,:active{
-        color:$white_txt !important;
-    }
+  }
 }
-.show{
-    display: block;
+
+.nav_links_style {
+  a {
+    color: $white_txt !important;
     font-size: 0.9rem;
-    font-weight: 500;
+    font-weight: $fw500;
     margin-right: 1.5rem;
+    padding: 1.1rem;
+  }
+  :hover,
+  :focus,
+  :active {
+    color: $white_txt !important;
+  }
 }
-.hide{
-    display: none;
+.show {
+  display: block;
+  font-size: 0.9rem;
+  font-weight: 500;
+  margin-right: 1.5rem;
+}
+.hide {
+  display: none;
 }
 
-
-
-
-
-    
-
+@media screen and (max-width: 767px) {
+  .Navbar_Wrapper {
+    width: 100%;
+  }
+}
