--- a/components/HomeForm/Form.module.scss
+++ b/components/HomeForm/Form.module.scss
@@ -1,26 +1,33 @@
-.Form_Wrapper{
-    background-color: rgb(0, 0, 0, 0.65);
-    padding: 18px;
-    color: #fff;
-    font-size: 12px;
-    border-radius: 6px;
-    margin-left:30px;
+.Form_Wrapper {
+  background-color: rgb(0, 0, 0, 0.65);
+  padding: 18px;
+  color: #fff;
+  font-size: 12px;
+  width: 75%;
+  border-radius: 6px;
+  margin-left: 30px;
 
-    .Form_input{
-        padding: 4px 12px;
-        border-radius: 2px;
-    }
+  .Form_input {
+    padding: 4px 12px;
+    border-radius: 2px;
+  }
 
-    ::placeholder{
-        font-size: 14px;
-    }
+  ::placeholder {
+    font-size: 14px;
+  }
 
-    .Form_btn{
-        border-radius: 3px;
-        padding: 5px;
-        font-size: 14px;
-        font-weight: 600px;
-        font-style: bold;
-    }
+  .Form_btn {
+    border-radius: 3px;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: 600px;
+    font-style: bold;
+  }
 }
 
+@media screen and (max-width: 767px) {
+  .Form_Wrapper {
+    width: 100%;
+    margin-top: 1rem;
+  }
+}
