--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,3 +51,8 @@ a {
     color: #fff !important;
   }
 }
+
+// Search Form
+
+.form-label{margin-right: 25px; color: #bfbfbf; align-self: center;}
+.accordion-item{background-color: #ededed !important;}
