--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,3 +51,11 @@ a {
     color: #fff !important;
   }
 }
+
+.default-anchor {
+  text-decoration: none;
+  color: #fff;
+  &:hover{
+    color: inherit;
+  }
+}
