--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 @import "../../styles/constants.scss";
 .Navbar_Wrapper {
-  background: $darkGrey_bg;
+  background: $transparent_maroon;
   padding: 0;
   height: 63px;
   width: 75%;
