--- a/pages/LandingPage/LandingPage.module.scss
+++ b/pages/LandingPage/LandingPage.module.scss
@@ -76,7 +76,7 @@
     }
     .card_bottom{
         height: 232px;
-        background-color: $darkGrey_bg;
+        background-color: $dark_maroon_bg;
         margin-top: -10rem;
     }
     .services_box{
@@ -92,7 +92,7 @@
         margin: auto;
     }
     .Home_colord_body{
-        background-color: $darkGrey_bg;
+        background-color: $dark_maroon_bg;
         color: $white_txt;
         .content{
             padding: 3rem;
