--- a/styles/constants.scss
+++ b/styles/constants.scss
@@ -5,7 +5,9 @@ $milkWhite_bg: #ffffff;
 $darkWhite_bg: #f8f9f9;
 $darkGrey_bg: #34495ef2;
 $red_bg: #d9475c;
-
+$transparent_maroon: #92243bf5;
+$more_transparent_maroon: #92243cce;
+$dark_maroon_bg: #92243c;
 
 //Text Color
 $white_txt: #fff;
