--- a/components/HomeImage/HomeImage.module.scss
+++ b/components/HomeImage/HomeImage.module.scss
@@ -1,6 +1,6 @@
 
 .homeImage {
-    background: url(../../public/Images/cover_img_free_chat.png);
+    // background: url(../../public/Images/cover_img_free_chat.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 622px;
