fixed done for login modal

--- a/pages/BrowseProfile/BrowseProfile.module.scss
+++ b/pages/BrowseProfile/BrowseProfile.module.scss
@@ -62,7 +62,7 @@
 // }
 
 .Browse_colord_body{
-    background-color: $darkGrey_bg;
+    background-color: $transparent_maroon;
     color: $white_txt;
     padding: 0 1rem;
     margin-top: 1rem;
