--- a/components/HomeForm/Form.module.scss
+++ b/components/HomeForm/Form.module.scss
@@ -25,8 +25,10 @@
   }
 }
 // Modal Form
-.modal_form{
-  position: absolute;
+.modal_form {
+  height: 100vh;
+  position: fixed;
+  top: 0;
   width: 100%;
   height: 100%;
   background: rgb(0, 0, 0, 0.95);
@@ -34,24 +36,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  Form{
+  Form {
     width: 35vw;
     position: absolute;
     padding: 45px;
     background: #e7e7e6;
-    .Form_btn{
+    @media screen and (max-width: 500px) {
+      width: auto;
+      padding: 40px;
+    }
+    .Form_btn {
       border-radius: 0px;
       box-shadow: 1px 1px 1.5px 0.2px rgb(59, 54, 54);
     }
-    .modal_links{color:#065ad8d3;}
-    Input{
+    .modal_links {
+      color: #065ad8d3;
+    }
+    Input {
       border-radius: 0px;
       margin-bottom: 1.5rem;
       padding: 0.8rem 1.5rem;
       box-shadow: 1px 1px 1.5px 0.2px rgb(59, 54, 54);
       background-color: #e7e7e6;
-      border: 1px solid gray;    
+      border: 1px solid gray;
     }
+  }
+  .modal_closeBtn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    background: none;
+    font-size: 1.5rem;
   }
 }
 
@@ -59,5 +74,10 @@
   .Form_Wrapper {
     width: 100%;
     margin-top: 1rem;
+    .modal_form {
+      label {
+        display: block;
+      }
+    }
   }
 }
