home page changes request

--- a/pages/HelpPage/HelpMain.module.scss
+++ b/pages/HelpPage/HelpMain.module.scss
@@ -80,7 +80,7 @@
 
 // HelpMain scss
 .banner_bg {
-  background-image: url("../../public/Images/cover_img_free_chat.png");
+  background-image: url("../../public/Images/cover_img_free_chat.jpg");
   background-position: center;
   position: static;
   height: 150px;
