--- a/components/Cards/Card.module.scss
+++ b/components/Cards/Card.module.scss
@@ -1,8 +1,11 @@
-.card{
-    position: relative;
-    width: 75%;
-    // min-height: 12.5em;
-    padding: 1.25em;
-    box-shadow: 0 0.625em 1.25em #0006;
-    margin-right: -75px
+.card {
+  position: relative;
+  width: 75%;
+  padding: 1.25em;
+  box-shadow: 0 0.625em 1.25em #0006;
+  margin-right: -75px;
+  @media screen and (max-width: 991px) {
+    width: 100%;
+    margin-right: 0;
+  }
 }
