--- a/pages/LandingPage/LandingPage.module.scss
+++ b/pages/LandingPage/LandingPage.module.scss
@@ -1,182 +1,174 @@
 @import "../../styles/constants.scss";
 
-
-.Home_Page_Wrapper{
-    margin-top: -34rem;
-    width: 75%;
-    span{
-        color: $lightGrey_txt;
-        letter-spacing: 1.75px;
-        font-size: 0.875rem;
+.Home_Page_Wrapper {
+  margin-top: -34rem;
+  width: 75%;
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  span {
+    color: $lightGrey_txt;
+    letter-spacing: 1.75px;
+    font-size: 0.875rem;
+  }
+  h1 {
+    font-size: 1.75rem;
+    font-weight: $fw400;
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
+    strong {
+      color: $red_txt;
     }
-    h1{
-        font-size: 1.75rem;
-        font-weight: $fw400;
-        padding-top: 0.5rem;
-        padding-bottom: 1rem;
-        strong{
-            color: $red_txt;
-        }
+  }
+  h3 {
+    font-weight: $fw600;
+    font-size: 1rem;
+    padding-top: 1rem;
+  }
+  .Home_heading {
+    h1 {
+      font-family: "Noto Serif", "serif";
+      font-style: normal;
+      font-weight: 900;
+      font-size: 3rem;
+      line-height: 3.25rem;
+      letter-spacing: -0.03em;
+      color: $white_txt;
+      text-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
     }
-    h3{
-        font-weight: $fw600;
-        font-size: 1rem;
-        padding-top: 1rem;
+    span {
+      color: $white_txt;
+      font-size: 1.25rem;
+      text-shadow: 0px 4px 4px rgb(0 0 0 / 75%);
+      margin-top: 0.375rem;
     }
-    .Home_heading {
-            h1{
-            font-family: 'Noto Serif',"serif";
-            font-style: normal;
-            font-weight: 900;
-            font-size: 3rem;
-            line-height: 3.25rem;
-            letter-spacing: -0.03em;
-            color: $white_txt;
-            text-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
-        }
-        span{
-            color: $white_txt;
-            font-size: 1.25rem;
-            text-shadow: 0px 4px 4px rgb(0 0 0 / 75%);
-            margin-top: 0.375rem;
-        }
+  }
+  .Home_white_body {
+    background-color: $milkWhite_bg;
+    padding: 3rem;
+    box-shadow: 0 2px 6px 0 rgb(142 142 142 / 20%);
+    border-radius: 0.25rem;
+  }
+  .Home_dark_body {
+    background-color: $darkWhite_bg;
+    padding: 3rem;
+    box-shadow: 0 2px 6px 0 rgb(142 142 142 / 20%);
+    border-radius: 0.25rem;
+    p {
+      text-align: justify;
     }
-    .Home_white_body{
-        background-color: $milkWhite_bg;
-        padding: 3rem;
-        box-shadow: 0 2px 6px 0 rgb(142 142 142 / 20%);
-        border-radius: 0.25rem;
-        img{
-            width: 14%;
-        }
-        .services_border{
-            border-right: 1px solid $light_border;
-            border-left: 1px solid $light_border;
-        }
+    .landing_scroll_images {
+      max-height: 60vh;
+      overflow-y: scroll;
+      scroll-behavior: smooth;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+        width: 0px;
+        background: transparent;
+      }
+      img {
+        height: auto;
+        max-width: 100%;
+        width: 100%;
+      }
     }
-    .Home_dark_body{
-        background-color: $darkWhite_bg;
-        padding: 3rem;
-        box-shadow: 0 2px 6px 0 rgb(142 142 142 / 20%);
-        border-radius: 0.25rem;
-        p{
-            text-align: justify;
-        }
-        .landing_scroll_images{
-            max-height: 60vh;
-            overflow-y: scroll;
-            scroll-behavior: smooth;
-            -ms-overflow-style: none; 
-            scrollbar-width: none;
-            &::-webkit-scrollbar {
-                display: none;
-                width: 0px;
-                background: transparent;
-            }
-            img{
-                height: auto;
-                max-width: 100%;
-                width: 80%;
-            }
-        }
-        .cardBox{
-            position: relative;
-            width: 16em;
-            min-height: 12.5em;
-            padding: 1.25em;
-            color: var(--text-color, #586875);
-            background-color: var(--card-bg, #f4f7f7);
-            border-radius: 0.125em;
-            box-shadow: 0 0.625em 1.25em #0006;
-        }
-        .scrollBox{
-            transition: opacity .1s linear;
-            opacity: 0.5;
-            cursor: pointer;
-        }
-        :hover{
-            opacity: 1;
-        }
-        .toggle{
-            opacity: 1;
-          }
-      
+    .cardBox {
+      position: relative;
+      width: 16em;
+      min-height: 12.5em;
+      padding: 1.25em;
+      color: var(--text-color, #586875);
+      background-color: var(--card-bg, #f4f7f7);
+      border-radius: 0.125em;
+      box-shadow: 0 0.625em 1.25em #0006;
     }
-    .card_bottom{
-        height: 232px;
-        background-color: $dark_maroon_bg;
-        margin-top: -10rem;
+    .scrollBox {
+      transition: opacity 0.1s linear;
+      opacity: 0.5;
+      cursor: pointer;
     }
-    .services_box{
-        background-image: url("../../public/Images/landing_page_talk.jpg");
-        text-align: center;
-        background-color: $darkWhite_bg;
-        background-repeat: no-repeat;
-        background-position: bottom left;
-        width: 851px;
-        height: 490px;
-        padding: 2rem 0;
-        border-radius: 12px;
-        margin: auto;
-        text-align: left;
-        padding: inherit;
-        /////////////
-        background-repeat:no-repeat;
-        -webkit-background-size:cover;
-        -moz-background-size:cover;
-        -o-background-size:cover;
-        background-size:cover;
-        background-position:center;
+    :hover {
+      opacity: 1;
     }
-    .Home_colord_body{
-        background-color: $dark_maroon_bg;
-        color: $white_txt;
-        .content{
-            padding: 3rem;
-        }
-        h1{
-            font-size: 1.75rem;
-            font-weight: 400;
-            padding-top: 0.5rem;
-            padding-bottom: 1rem;
-        }
-        p{
-            line-height: 27px;
-        }
-        img{
-            width: 76%;
-        }
+    .toggle {
+      opacity: 1;
     }
+  }
+  .card_bottom {
+    height: 232px;
+    background-color: $dark_maroon_bg;
+    margin-top: -10rem;
+  }
+  .services_box {
+    background-image: url("../../public/Images/landing_page_talk.jpg");
+    text-align: center;
+    background-color: $darkWhite_bg;
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    width: 851px;
+    height: 490px;
+    padding: 2rem 0;
+    border-radius: 12px;
+    margin: auto;
+    text-align: left;
+    padding: inherit;
+    /////////////
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center;
+  }
+  .Home_colord_body {
+    background-color: $dark_maroon_bg;
+    color: $white_txt;
+    .content {
+      padding: 3rem;
+    }
+    h1 {
+      font-size: 1.75rem;
+      font-weight: 400;
+      padding-top: 0.5rem;
+      padding-bottom: 1rem;
+    }
+    p {
+      line-height: 27px;
+    }
+    img {
+      width: 76%;
+    }
+  }
 }
 
 @media only screen and (max-width: 500px) {
-    .Home_Page_Wrapper{
-      width: 90%;
-      margin-top: 0;
-    }
-   .firstTopBox{
+  .Home_Page_Wrapper {
+    width: 90%;
+    margin-top: 0;
+  }
+  .firstTopBox {
     display: none;
-   }
-   .Home_dark_body {
+  }
+  .Home_dark_body {
     padding: 2.62rem 0.5rem !important;
-   }
-   .Home_white_body {
+  }
+  .Home_white_body {
     padding: 2.62rem 0.5rem !important;
-   }
-   .Home_colord_body {
-    .content{
-        padding: 2.62rem 0.5rem !important;
+  }
+  .Home_colord_body {
+    .content {
+      padding: 2.62rem 0.5rem !important;
     }
-   }
-   .services_box{
+  }
+  .services_box {
     background-size: cover;
     height: auto !important;
-   }
-   .Home_colord_body{
-    img{
-        width: 100% !important;
-    }
-}
   }
-
- 
+  .Home_colord_body {
+    img {
+      width: 100% !important;
+    }
+  }
+}
