--- a/components/Header/Navoptions.module.scss
+++ b/components/Header/Navoptions.module.scss
@@ -13,7 +13,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   align-content: flex-start;
-
+  padding: 0.75rem;
   >a {
     color: #fff;
     height: -webkit-fill-available;
