--- a/pages/LandingPage/LandingPage.module.scss
+++ b/pages/LandingPage/LandingPage.module.scss
@@ -58,7 +58,7 @@
       text-align: justify;
     }
     .landing_scroll_images {
-      max-height: 60vh;
+      max-height: 70vh;
       overflow-y: scroll;
       scroll-behavior: smooth;
       -ms-overflow-style: none;
@@ -92,7 +92,7 @@
     :hover {
       opacity: 1;
     }
-    .toggle {
+    .active {
       opacity: 1;
     }
   }
