--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -68,9 +68,9 @@ p {
   h1 {
     font-size: 1.5rem !important;
   }
-  h2 {
-    font-size: 0.875rem !important;
-  }
+  // h2 {
+  //   font-size: 0.875rem !important;
+  // }
   h3 {
     font-size: 0.875rem !important;
   }
