--- a/pages/LandingPage/LandingPage.module.scss
+++ b/pages/LandingPage/LandingPage.module.scss
@@ -10,8 +10,10 @@
     color: $lightGrey_txt;
     letter-spacing: 1.75px;
     font-size: 0.875rem;
-    width: 50%;
-    display: block;
+    @media screen and (max-width: 576px) {
+      width: 50%;
+      display: block;
+    }
   }
   h1 {
     font-size: 1.75rem;
