--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -83,3 +83,133 @@
       width: 100%;
     }
   }
+
+
+/////////////////////////////////////////inputboxes SCSS////////////////////////////////////////////////////////////////////////////////
+
+.formEdit{
+    .singleBox{
+        // display: flex;
+        div{
+            width: 100%;
+            svg{
+                position: absolute;
+                right: 15px;
+                top: 40%;
+            }
+        }
+        .inputBox{
+            border: 1px solid #d9d9d9;
+            border-radius: 2px;
+            padding: 0.875rem 5.5rem;
+            text-align: center;
+            margin: 0.6em;
+            color: $browser_text;
+            cursor: pointer;
+            position: relative;
+            min-width: 275px;   
+            background-color: $milkWhite_bg;
+            .inputBoxVal{
+                visibility: hidden;
+                border: 1px solid #d9d9d9;
+                border-radius: 2px;
+                padding: 0.875rem 1rem;
+                text-align: center;
+                margin: 0.6em;
+                color: $browser_text;
+                cursor: pointer;
+                width: 100%;
+                position: absolute;
+                left: -9px;
+                border: 1px solid $red_bg;
+                background: $milkWhite_bg;
+                box-shadow: 0 4px 5px rgb(0 0 0 / 15%);
+                z-index: 9;
+                ul{
+                    list-style: none;
+                    margin: 0;
+                    padding: 0 5px;
+                    width: 100%;
+                    max-height: 300px;
+                    overflow-x: hidden;
+                    overflow-y: scroll;   
+                    cursor: text;
+                    display: grid;
+                    grid-template-columns: auto auto auto;
+                    li{
+                        position: relative;
+                        margin: 3px 5px 3px 0;
+                        padding: 10px 20px 10px 5px;
+                        border: 1px solid #d9d9d9;
+                        max-width: 100%;
+                        border-radius: 3px;
+                        background-color: #f5f5f5;
+                        line-height: 13px;
+                        cursor: default;
+                        &:hover{
+                            background-color: #d9475c;
+                            color: #fff
+                        }
+                    }  
+                    .tabActive{
+                        background-color: #d9475c;
+                        color: #fff
+                    }
+                }
+            }
+        }
+        .blankInput{
+            border: none !important;
+            background: transparent !important;
+            list-style: none;
+            input{
+                // margin: 1px 0;
+                padding: 0;
+                height: 25px;
+                outline: 0;
+                border: 0 !important;
+                background: transparent !important;
+                box-shadow: none;
+                color: #999;
+                font-size: 100%;
+                font-family: sans-serif;
+                line-height: normal;
+                border-radius: 0;
+            }
+        }
+    }
+    .input_max{
+        width: -webkit-fill-available;
+    }
+    label{
+        position: absolute;
+        margin: 1rem 0 0 -9rem;
+        width: 130px;
+        text-align: end;
+    }
+    input{
+        border: 1px solid #d9d9d9;
+        border-radius: 2px;
+        padding: 0.875rem 2.5rem;
+        text-align: center;
+        margin: 0.6em;
+        &:focus{
+            outline: none;
+        }
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+  .active{
+    visibility: visible !important;
+}
