--- a/styles/constants.scss
+++ b/styles/constants.scss
@@ -8,6 +8,7 @@ $red_bg: #d9475c;
 $transparent_maroon: #92243bf5;
 $more_transparent_maroon: #92243cce;
 $dark_maroon_bg: #92243c;
+$light_grey_bg: #f0f2f7;
 
 //Text Color
 $white_txt: #fff;
@@ -15,6 +16,7 @@ $lightGrey_txt: #8A9DB0;
 $red_txt: #d9475c;
 $dark_txt: #4444;
 $browser_text: #909090;
+$lighter_text: #34495e;
 
 
 //Font weights
