--- a/pages/ProfileDetails/Components/Card/ProfileCard.module.scss
+++ b/pages/ProfileDetails/Components/Card/ProfileCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/constants.scss";
+@import "../../../../styles/constants.scss";
 .cardWrapper{
     margin-top: -3rem;
     width: 75%;
