--- a/pages/ProfileDetails/ProfileDetails.module.scss
+++ b/pages/ProfileDetails/ProfileDetails.module.scss
@@ -2,7 +2,7 @@
 
 .background_header {
     background: url("../../public/Images/cover-image-register.jpg") no-repeat center center;
-    padding: 3rem 0 15rem 0;
+    padding: 3rem 0 6rem 0;
     background-size: cover;
 }
 
@@ -16,12 +16,12 @@
 
     .tabsStyle {
         display: flex;
-        justify-content: space-around;
         border-bottom: 1px solid #34495e;
-        padding: 20px 0;
         background-color: $milkWhite_bg;
         margin-right: 10px;
         color: $lighter_text;
+        position: sticky;
+        top: 1px;
 
         div {
             display: flex;
@@ -30,119 +30,24 @@
             align-items: center;
             color: #34495e;
             cursor: pointer;
-
+            padding: 20px 0;
+            width: 25%;    
             svg {
                 font-size: 2.5rem;
             }
         }
     }
-    .content{
-        padding: 30px 27px 20px 55px;
-        background-color: $milkWhite_bg;
+  
+    .datecont{
+        background-color: #d5d5d5;
+        padding: 17px 27px 17px 25px;
         margin-right: 10px;
-        font-size: 0.938rem;
-        border-bottom: 1px solid #c2c8ce;
-        .aboutCont{
-            font-size: 0.938rem;
-            margin: 0 3rem;
-            :first-child{
-                color: #34495e;
-                padding-top: 0.938rem;
-            }
-            h4{
-                color: #999;
-                line-height: 1.3rem;
-                padding-top: 0.938rem;
-            }
-            p{
-                margin: 1rem 0;
-                color: #34495e;
-            }
+        p{
+            color: #777;
         }
-        .eduCont{
-            span{
-                font-size: 1.063rem;
-                color: $red_txt;
-                svg{
-                    margin-right: 0.5rem;
-                    font-size: 2rem;
-                }
-            }
-            ul {
-                list-style-type: none;
-                font-size: 0.875rem;
-                text-align: left;
-                padding: 2rem 0 0 0;
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                margin: 0 3rem;
+    }
     
-                li {
-                    width: 50%;
-                    :nth-last-child(2) {
-                        color: #999;
-                        margin-bottom: 0.2rem;
-                    }
-                }
-            }
-        }
-        .familyCont{
-            span{
-                font-size: 1.063rem;
-                color: $red_txt;
-                svg{
-                    margin-right: 0.5rem;
-                    font-size: 2rem;
-                }
-            }
-            .controlDiv{
-                padding: 2rem 0 0 0;
-                svg{
-                    color: #999;
-                    font-size: 1.5rem;
-                    margin: 0 3rem;
-                }
-                p{
-                    padding-top: 1.8rem;
-                }
-            }
-        }
-    }
-
-    .rghtSec {
-        background-color: $milkWhite_bg;
-        padding: 2rem 1rem;
-        text-align: center;
-        color: #34495e;
-
-        .gunaNo {
-            font-size: 1.6rem;
-        }
-
-        p {
-            text-align: left;
-        }
-
-        button {
-            width: 100%;
-        }
-
-        ul {
-            list-style-type: none;
-            font-size: 0.875rem;
-            text-align: left;
-            padding: 2rem 0 0 0;
-            border-top: 1px solid #34495e;
-
-            li {
-                :nth-last-child(2) {
-                    color: #999;
-                    margin-bottom: 0.2rem;
-                }
-            }
-        }
-    }
+    
 }
 
 .activeLine {
