--- a/components/BrowserLink/Browser.module.scss
+++ b/components/BrowserLink/Browser.module.scss
@@ -5,15 +5,18 @@
     text-align: center;
     display: flex;
     flex-wrap: wrap;
-    height: 115px;
-    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 20px;
     span{
         color: #405765;
-        margin-right: 14px;
         cursor: pointer;
         padding: 0.5rem;
+        // padding: 0.5rem 1rem;
         font-size: 1rem;
         display: inline-block;
+        // border: 1px solid;
+        // border-radius: 20px;
     }
 }
 .browserBottomBox{
@@ -21,10 +24,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    min-height: 120px;
+    gap: 10px;
     a{
         color: $browser_text;
-        margin-right: 14px;
         cursor: pointer;
         padding: 0.3125rem 0.625rem;
         line-height: 24px;
