--- a/pages/HelpPage/HelpMain.module.scss
+++ b/pages/HelpPage/HelpMain.module.scss
@@ -8,6 +8,12 @@
     background: #fff;
     padding: 0 2rem;
     font-size: 14px;
+    width: 75%;
+
+    @media only screen and (max-width: 676px) {
+      width: auto;
+    }
+
     @media screen and (min-width: 991px) {
       .b_right {
         border-right: 1px solid #bdbaba !important;
@@ -47,7 +53,12 @@
       border: none;
       border-radius: 0px;
       margin-top: 20px;
+
+      @media only screen and (max-width: 300px) {
+        width: auto;
+      }
     }
+
 
     .categories {
       padding: 10px 10px 20px 10px;
@@ -69,6 +80,10 @@
       align-items: center;
       border-top: 1px solid #aca5a5;
 
+      @media only screen and (max-width: 676px) {
+        padding-bottom: 3rem;
+      }
+
       button {
         width: 150px;
         color: hsl(0, 9%, 90%);
@@ -83,7 +98,9 @@
   background-image: url("../../public/Images/cover_img_free_chat.jpg");
   background-position: center;
   position: static;
-  height: 150px;
+  height: 65vh;
+  background-size: cover;
+
 }
 
 // Modal
@@ -103,10 +120,12 @@
     position: absolute;
     padding: 45px;
     background: #e7e7e6;
+
     @media only screen and (max-width: 500px) {
       width: auto;
       padding: 40px;
     }
+
     .Form_btn {
       border-radius: 0px;
       box-shadow: 1px 1px 1.5px 0.2px rgb(59, 54, 54);
@@ -166,5 +185,3 @@
     margin-bottom: 1rem;
   }
 }
-
-
