--- a/pages/ProfileDetails/Components/About/About.module.scss
+++ b/pages/ProfileDetails/Components/About/About.module.scss
@@ -31,3 +31,25 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 676px) {
+    .content{
+        margin: 0%;
+        padding: 25px;
+
+        .aboutCont{
+            margin: 0%;
+        }
+    }
+}
