--- a/pages/ProfileDetails/Components/Card/ProfileCard.module.scss
+++ b/pages/ProfileDetails/Components/Card/ProfileCard.module.scss
@@ -1,40 +1,56 @@
 @import "../../../../styles/constants.scss";
-.cardWrapper{
+
+.cardWrapper {
     margin-top: -3rem;
     width: 75%;
-    img{
-        width: 284px;
+
+    img {
+        width: 100%;
     }
-    SVG{
+
+    SVG {
         cursor: pointer;
     }
-    .cardInfo{
+
+    .cardInfo {
         padding: 20px 34px 10px 34px;
         background-color: $light_grey_bg;
-        span{
+
+        @media only screen and (max-width: 676px) {
+            .NameDetails {
+                min-height: 50px;
+            }
+        }
+
+        span {
             font-size: 24px;
             color: $darkGrey_bg;
         }
-        small{
+
+        small {
             font-size: 12px;
             color: $darkGrey_bg;
         }
-        small:nth-child(4){
+
+        small:nth-child(4) {
             float: right;
         }
-       .lockIcon{
-        svg{
-            color: $red_bg; 
-            cursor: pointer;
+
+        .lockIcon {
+            svg {
+                color: $red_bg;
+                cursor: pointer;
+            }
         }
-       }
-       .tickIcon{
-        svg{
-           color: #2e97ea;  
-           cursor: pointer;    
-         }
+
+        .tickIcon {
+            svg {
+                color: #2e97ea;
+                cursor: pointer;
+            }
         }
-        ul{
+
+        ul {
             padding: 0;
             list-style: none;
             display: flex;
@@ -42,33 +58,56 @@
             flex-direction: column;
             height: 130px;
             padding-top: 1rem;
-            li{
+
+            li {
                 color: $darkGrey_bg;
                 margin-bottom: 3px;
             }
+
+            @media only screen and (max-width: 676px) {
+                height: auto;
+                flex-direction: column;
+                width: 100%;
+                gap: 5px;
+
+                li {
+                    margin-bottom: 0%;
+                }
+            }
+        }
+
+        .profileCardIiconSection {
+            display: flex;
+            gap: 10px;
         }
     }
-    .rightBox{
-        background-color: rgb(52 73 94);;
+
+    .rightBox {
+        background-color: rgb(52 73 94);
+        ;
         color: $white_txt;
         text-align: start;
         padding: 0;
-        p{
+
+        p {
             line-height: 55px;
             padding-left: 24px;
             cursor: pointer;
             font-size: 20px;
             margin: 0;
         }
-        :hover{
+
+        :hover {
             background-color: $red_bg;
         }
-        svg{
+
+        svg {
             margin-right: 20px;
             font-size: 1.5rem;
         }
     }
 }
-.bg{
+
+.bg {
     background: rgb(231, 230, 230);
-}   
+}
