--- a/pages/ProfileDetails/Components/Education/Edu.module.scss
+++ b/pages/ProfileDetails/Components/Education/Edu.module.scss
@@ -36,3 +36,41 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 676px) {
+    .content{
+        margin: 0%;
+        padding: 25px;
+
+        .eduCont{
+           margin: 0;
+            ul{
+                margin: 0%;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 300px) {
+    .content{
+        padding: 0px;
+
+        .eduCont{
+            margin: 0%;
+
+
+            ul{
+                margin: 0%;
+            }
+        }
+    }
+}
