--- a/pages/ProfileDetails/Components/Family/family.module.scss
+++ b/pages/ProfileDetails/Components/Family/family.module.scss
@@ -1,34 +1,40 @@
 @import "../../../../styles/constants.scss";
 
-.content{
+.content {
     padding: 30px 27px 20px 55px;
     background-color: $milkWhite_bg;
     margin-right: 10px;
     font-size: 0.938rem;
     border-bottom: 1px solid #c2c8ce;
-    span{
+
+    span {
         font-size: 1.063rem;
         color: $red_txt;
-        svg{
+
+        svg {
             margin-right: 0.5rem;
             font-size: 2rem;
         }
     }
-    .familyCont{
-        .controlDiv{
+
+    .familyCont {
+        .controlDiv {
             padding: 2rem 0 0 0;
-            svg{
+
+            svg {
                 color: #999;
                 font-size: 1.5rem;
                 margin: 0 3rem;
             }
-            p{
+
+            p {
                 padding-top: 1.8rem;
             }
         }
     }
-    .eduCont{
-        
+
+    .eduCont {
+
         ul {
             list-style-type: none;
             font-size: 0.875rem;
@@ -41,9 +47,49 @@
 
             li {
                 width: 50%;
+
                 :nth-last-child(2) {
                     color: #999;
                     margin-bottom: 0.2rem;
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+@media only screen and (max-width: 676px) {
+    .content {
+        margin: 0%;
+        padding: 25px;
+
+        .eduCont {
+            margin: 0%;
+
+            ul {
+                margin: 0%;
+            }
+        }
+
+        .familyCont {
+            .controlDiv {
+                padding: 2rem 0 0 0;
+    
+                svg {
+                    margin: 0 3rem;
+                    margin-bottom: 0.31rem;
+                }
+    
+                p {
+                    padding-top: 0;
+                    text-align: center;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
                 }
             }
         }
