--- a/pages/ProfileDetails/ProfileDetails.module.scss
+++ b/pages/ProfileDetails/ProfileDetails.module.scss
@@ -31,23 +31,66 @@
             color: #34495e;
             cursor: pointer;
             padding: 20px 0;
-            width: 25%;    
+            width: 25%;
+
             svg {
                 font-size: 2.5rem;
             }
         }
+
+        @media only screen and (max-width: 676px) {
+            margin-right: 0%;
+
+            .profileNavbar {
+                display: flex;
+                justify-content: flex-start;
+                text-align: center;
+
+                svg {
+                    font-size: 2.0rem;
+                }
+            }
+        }
+
+
+        @media only screen and (max-width: 300px) {
+            .profileNavbar {
+
+                svg {
+                    font-size: 1.5rem;
+                }
+
+                span{
+                    font-size: xx-small !important;
+                }
+            }
+        }
     }
-  
-    .datecont{
+
+    .datecont {
         background-color: #d5d5d5;
         padding: 17px 27px 17px 25px;
         margin-right: 10px;
-        p{
+
+        p {
             color: #777;
         }
     }
-    
-    
+
+    @media only screen and (max-width: 676px) {
+        .datecont {
+            margin-right: 0;
+            padding: 17px 25px;
+            text-align: center;
+
+            p {
+                margin-bottom: 0%;
+            }
+        }
+    }
+
+
+
 }
 
 .activeLine {
