--- a/pages/Register/RegisterComponent/RegisterHeader/RegisterHeader.module.scss
+++ b/pages/Register/RegisterComponent/RegisterHeader/RegisterHeader.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/constants.scss";
+@import "../../../../styles/constants.scss";
 .Navbar_Wrapper {
   background: $transparent_maroon;
   padding: 0;
