--- a/pages/Register/RegisterDetails.module.scss
+++ b/pages/Register/RegisterDetails.module.scss
@@ -10,7 +10,7 @@
     text-align: center;
     width: 75%;
     margin: auto;
-    a{
+    .topButtons{
         border-bottom: 2px solid #fff;
         font-size: 17px;
         display: block;
@@ -18,6 +18,7 @@
         padding-bottom: 10px;
         color: #fff;
         opacity: 0.5;
+        cursor: pointer;
     }
     .active{
         opacity: 1;
